--- a/BigBangGame/Base.lproj/Main.storyboard
+++ b/BigBangGame/Base.lproj/Main.storyboard
@@ -40,8 +40,7 @@
                                     <rect key="frame" x="138" y="315" width="113" height="36"/>
                                 </variation>
                                 <connections>
-                                    <action selector="toLeaderboard:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="hGy-kz-FWi"/>
-                                    <segue destination="yMQ-vw-r0S" kind="show" id="KFB-2s-eHq"/>
+                                    <segue destination="Njr-5J-ZMg" kind="show" id="jsG-dQ-NQH"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Who are you player?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UHa-VA-p7J">
@@ -112,75 +111,51 @@
             </objects>
             <point key="canvasLocation" x="139.5" y="136"/>
         </scene>
-        <!--Leaderboard View Controller-->
-        <scene sceneID="3FI-Zw-bjg">
+        <!--Root View Controller-->
+        <scene sceneID="fs4-BE-HUc">
             <objects>
-                <viewController id="yMQ-vw-r0S" customClass="LeaderboardViewController" customModule="BigBangGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="VMv-uS-u8x"/>
-                        <viewControllerLayoutGuide type="bottom" id="Ieh-g5-ans"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="M7S-tT-dLw">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                <tableViewController id="8LK-g4-flg" customClass="DetailTableViewController" customModule="BigBangGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="xWE-t6-1AY">
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="BmO-6h-WX0">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="61" width="400" height="496"/>
-                                </variation>
-                                <connections>
-                                    <outlet property="dataSource" destination="yMQ-vw-r0S" id="SZR-8F-XAK"/>
-                                    <outlet property="delegate" destination="yMQ-vw-r0S" id="KDl-dJ-ncD"/>
-                                </connections>
-                            </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9O1-7p-d7q">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Back">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="172" y="550" width="56" height="42"/>
-                                </variation>
-                                <connections>
-                                    <segue destination="vXZ-lx-hvc" kind="show" id="FQU-S1-Ifb"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Leaderboard: See where you stand" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h5r-wq-sSK">
-                                <rect key="frame" x="166" y="20" width="269" height="35"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                                <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="18" width="368" height="35"/>
-                                </variation>
-                            </label>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="BmO-6h-WX0"/>
-                                <exclude reference="9O1-7p-d7q"/>
-                                <exclude reference="h5r-wq-sSK"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=compact">
-                            <mask key="subviews">
-                                <include reference="BmO-6h-WX0"/>
-                                <include reference="9O1-7p-d7q"/>
-                                <include reference="h5r-wq-sSK"/>
-                            </mask>
-                        </variation>
-                    </view>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="bjg-CA-ajI">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bjg-CA-ajI" id="cJi-Go-Qlg">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="8LK-g4-flg" id="roy-N8-kn5"/>
+                            <outlet property="delegate" destination="8LK-g4-flg" id="wyw-Iz-Jme"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Root View Controller" id="Q2V-sG-Zri"/>
                     <connections>
-                        <outlet property="leaderboardView" destination="BmO-6h-WX0" id="sbY-ul-TBQ"/>
+                        <outlet property="playerView" destination="xWE-t6-1AY" id="J1K-qf-eT9"/>
+                        <outlet property="tableView" destination="xWE-t6-1AY" id="rSG-WI-D7g"/>
                     </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aN6-Wi-izX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="klI-cQ-mHL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="153" y="874"/>
+            <point key="canvasLocation" x="981" y="833"/>
+        </scene>
+        <!--Leaderboard-->
+        <scene sceneID="vzO-nd-fMz">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Git-Lb-far" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="Njr-5J-ZMg" customClass="Leaderboard" customModule="BigBangGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GLx-51-AUX">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="8LK-g4-flg" kind="relationship" relationship="rootViewController" id="kuN-IQ-mv4"/>
+                    </connections>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="139.5" y="840"/>
         </scene>
         <!--Single Player View Controller-->
         <scene sceneID="CGc-UJ-x4l">
@@ -302,7 +277,4 @@
             <point key="canvasLocation" x="874.5" y="136"/>
         </scene>
     </scenes>
-    <inferredMetricsTieBreakers>
-        <segue reference="Ha1-zN-65Q"/>
-    </inferredMetricsTieBreakers>
 </document>
