--- a/BigBangGame/Base.lproj/Main.storyboard
+++ b/BigBangGame/Base.lproj/Main.storyboard
@@ -40,7 +40,7 @@
                                     <rect key="frame" x="138" y="315" width="113" height="36"/>
                                 </variation>
                                 <connections>
-                                    <segue destination="Njr-5J-ZMg" kind="show" id="jsG-dQ-NQH"/>
+                                    <segue destination="6DI-VM-d6r" kind="show" id="qU6-BJ-GLR"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Who are you player?" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UHa-VA-p7J">
@@ -111,51 +111,88 @@
             </objects>
             <point key="canvasLocation" x="139.5" y="136"/>
         </scene>
-        <!--Root View Controller-->
-        <scene sceneID="fs4-BE-HUc">
+        <!--Leader Boardmk4-->
+        <scene sceneID="BXH-KL-bAa">
             <objects>
-                <tableViewController id="8LK-g4-flg" customClass="DetailTableViewController" customModule="BigBangGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="xWE-t6-1AY">
+                <viewController id="6DI-VM-d6r" customClass="LeaderBoardmk4" customModule="BigBangGame" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="20J-kT-cyy"/>
+                        <viewControllerLayoutGuide type="bottom" id="ex4-xf-9zd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nxf-zA-YbI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Leaderboard" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="okZ-7k-sQC">
+                                <rect key="frame" x="233" y="20" width="134" height="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="133" y="20" width="134" height="29"/>
+                                </variation>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l7R-Hd-VLh">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="177" y="550" width="47" height="38"/>
+                                </variation>
+                                <connections>
+                                    <segue destination="vXZ-lx-hvc" kind="show" id="KqH-Da-d8A"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="2pD-uj-dFw">
+                                <rect key="frame" x="0.0" y="99" width="600" height="538"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="separatorColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" textLabel="qkP-bl-65K" style="IBUITableViewCellStyleDefault" id="kMV-Nk-B2x">
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kMV-Nk-B2x" id="QMG-oR-PSx">
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="qkP-bl-65K">
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="0.0" y="61" width="400" height="477"/>
+                                </variation>
+                                <connections>
+                                    <outlet property="dataSource" destination="6DI-VM-d6r" id="2MW-Np-bnR"/>
+                                    <outlet property="delegate" destination="6DI-VM-d6r" id="r6N-Mo-DG2"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="bjg-CA-ajI">
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bjg-CA-ajI" id="cJi-Go-Qlg">
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="8LK-g4-flg" id="roy-N8-kn5"/>
-                            <outlet property="delegate" destination="8LK-g4-flg" id="wyw-Iz-Jme"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="Q2V-sG-Zri"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="l7R-Hd-VLh"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="l7R-Hd-VLh"/>
+                            </mask>
+                        </variation>
+                    </view>
                     <connections>
-                        <outlet property="playerView" destination="xWE-t6-1AY" id="J1K-qf-eT9"/>
-                        <outlet property="tableView" destination="xWE-t6-1AY" id="rSG-WI-D7g"/>
+                        <outlet property="tableView" destination="2pD-uj-dFw" id="hEj-i7-wXG"/>
                     </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="klI-cQ-mHL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fyn-JG-WfB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="981" y="833"/>
-        </scene>
-        <!--Leaderboard-->
-        <scene sceneID="vzO-nd-fMz">
-            <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Git-Lb-far" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationController id="Njr-5J-ZMg" customClass="Leaderboard" customModule="BigBangGame" customModuleProvider="target" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="GLx-51-AUX">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="8LK-g4-flg" kind="relationship" relationship="rootViewController" id="kuN-IQ-mv4"/>
-                    </connections>
-                </navigationController>
-            </objects>
-            <point key="canvasLocation" x="139.5" y="840"/>
+            <point key="canvasLocation" x="127.5" y="909"/>
         </scene>
         <!--Single Player View Controller-->
         <scene sceneID="CGc-UJ-x4l">
@@ -277,4 +314,7 @@
             <point key="canvasLocation" x="874.5" y="136"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="KqH-Da-d8A"/>
+    </inferredMetricsTieBreakers>
 </document>
